pod-security/baseline/restrict-apparmor-profiles/.kyverno-test/resource.yaml
---
###### Pods - Bad
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: unconfined
spec:
  containers:
    - name: container01
      image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
spec:
  containers:
    - name: container01
      image: dummyimagename
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: unconfined
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: runtime/default
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: unconfined
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: runtime/default
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
