pod-security/baseline/restrict-apparmor-profiles/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-apparmor-profiles
policies:
  - ../restrict-apparmor-profiles.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: restrict-apparmor-profiles
    resources:
      - badcronjob01
    result: fail
    rule: app-armor
  - kind: Deployment
    policy: restrict-apparmor-profiles
    resources:
      - baddeployment01
    result: fail
    rule: app-armor
  - kind: Pod
    policy: restrict-apparmor-profiles
    resources:
      - badpod01
    result: fail
    rule: app-armor
  - kind: CronJob
    policy: restrict-apparmor-profiles
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
    result: pass
    rule: app-armor
  - kind: Deployment
    policy: restrict-apparmor-profiles
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
    result: pass
    rule: app-armor
  - kind: Pod
    policy: restrict-apparmor-profiles
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
    result: pass
    rule: app-armor
